create console app assigned to admin

--- a/assets/deployPostInstall/package.xml
+++ b/assets/deployPostInstall/package.xml
@@ -10,5 +10,9 @@
         <members>Sustainability_Cloud_Lightning_Console_UtilityBar</members>
         <name>FlexiPage</name>
     </types>
+    <types>
+        <members>Admin</members>
+        <name>Profile</name>
+    </types>
     <version>48.0</version>
 </Package>
